完成基本代码
